# oop7

./: CMakeLists.txt  main.cpp  npc.cpp  npc.h  orc.cpp  orc.h  outlaw.cpp  outlaw.h  tests.cpp  werewolf.cpp  werewolf.h
